--- a/welcome_page.css
+++ b/welcome_page.css
@@ -375,9 +375,8 @@ header {
     .container {
         width: 95%;
     }
-
     .menu-item {
-        font-size: small;
+        font-size: smaller;
     }
 
     .header-menu {
