--- a/breakfest.css
+++ b/breakfest.css
@@ -113,9 +113,21 @@
     transform: translateY(100%);
     transition: transform 1s ease-out;
     line-height: 1.75;
-overflow: scroll;
-scroll-behavior: auto;
+    overflow-y: auto;
 }
+
+.overlay::-webkit-scrollbar {
+    width: 1em;
+  }
+
+  .overlay::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px var(--color_shadow);
+  }
+
+  .overlay::-webkit-scrollbar-thumb {
+    background-color: var(--basic_color);
+    outline: 1px solid slategrey;
+  }
 .ingredients{
     display: flex;
 }
